# ricos

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
scripts/: build.ps1  build.sh  debug_virtualbox.ps1  debug_virtualbox.sh
src/: acpi.rs  allocator.rs  command.rs  encoding.rs  error.rs  gdt.rs  interrupts.rs  lib.rs  logging.rs  main.rs  memory.rs  pc_speaker.rs  time.rs  vga_buffer.rs
src/allocator/: fixed_size_block.rs  linked_list.rs
src/task/: executor.rs  keyboard.rs  mod.rs  mouse.rs  simple_executor.rs  sleep.rs  spawner.rs
tests/: heap_allocation.rs  stack_overflow.rs
