[package]
name = "blog_os"
version = "0.1.0"
authors = ["Ricardo"]
edition = "2021"

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false

[features]
default = ["pc-speaker"]
random = ["rand"]
mouse = ["ps2-mouse", "spinning_top"]
pc-speaker = []

[dependencies]
bootloader = { version = "0.9.20", features = ["map_physical_memory"] }
rlibc = "1.0.0"
volatile = "0.2.6"
spin = "0.9.2"
x86_64 = "0.14.7"
uart_16550 = "0.2.16"
pic8259  = "0.10.0"
pc-keyboard = "0.5.1"
linked_list_allocator = "0.9.1"
log = "0.4.14"
ps2-mouse = { version = "0.1.4", optional = true }
spinning_top = { version = "0.2.4", optional = true }

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]

[dependencies.crossbeam-queue]
version = "0.3.3"
default-features = false
features = ["alloc"]

[dependencies.conquer-once]
version = "0.3.2"
default-features = false

[dependencies.futures-util]
version = "0.3.19"
default-features = false
features = ["alloc"]

[dependencies.rand]
version = "0.8.4"
default-features = false
features = ["small_rng"]
optional = true

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33         # (0x10 << 1) | 1
run-args=[
    "-soundhw", "pcspk", "-serial", "stdio",
]