[package]
name = "blog_os"
version = "0.1.0"
authors = ["Ricardo"]
edition = "2021"

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false

[features]
default = ["pc-speaker", "acpi-feat"]
random = ["rand"]
mouse = ["ps2-mouse", "spinning_top"]
pc-speaker = []
acpi-feat = ["acpi", "aml"]

[dependencies]
bootloader = { version = "0.9.22", features = ["map_physical_memory"] }
rlibc = "1.0.0"
volatile = "0.2.7"
spin = "0.9.4"
x86_64 = "0.14.10"
uart_16550 = "0.2.18"
pic8259  = "0.10.2"
pc-keyboard = "0.5.1"
linked_list_allocator = "0.9.1"
log = "0.4.17"
ps2-mouse = { version = "0.1.4", optional = true }
spinning_top = { version = "0.2.4", optional = true }
acpi = { version = "4.1.1", optional = true }
aml = { version = "0.16.1", optional = true }

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]

[dependencies.crossbeam-queue]
version = "0.3.6"
default-features = false
features = ["alloc"]

[dependencies.conquer-once]
version = "0.3.2"
default-features = false

[dependencies.futures-util]
version = "0.3.21"
default-features = false
features = ["alloc"]

[dependencies.rand]
version = "0.8.5"
default-features = false
features = ["small_rng"]
optional = true

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33         # (0x10 << 1) | 1
run-args=[
    "-audiodev", "dsound,id=audioout", "-machine", "pcspk-audiodev=audioout",
    "-serial", "stdio",
]
